[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypergraph"
version = "2025.0.0a4"
description = "The Pypergraph package provides secure wallet functionality in Python and convenient wrappers for interacting with Constellation Network APIs, inspired by the TypeScript library DAG4.js created by Stardust Collective."
authors = [{ name = "Michael Brummer Ringdal", email = "micbr@protonmail.com" }]
maintainers = [{name = "Michael Brummer Ringdal", email = "micbr@pm.me"}]
dependencies = [
    "base58~=2.1.1",
    "mnemonic~=0.21",
    "bip32utils~=0.3.post4",
    "cryptography~=44.0.0",
    "ecdsa~=0.19.0",
    "pyasn1~=0.6.1",
    "aiohttp~=3.11.11"
]
requires-python = ">=3.7"
readme = "README.md"
license = {file="LICENSE"}
keywords = ["hypergraph", "dag", "constellation", "metagraph", "constellationnetwork", "cryptography", "crypto", "cryptocurrency", "wallet", "finance", "dag4", "dag4.js", "stardust", "collective"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
]


[project.urls]
Homepage = "https://mringdal.com"
Documentation = "https://github.com/buzzgreyday/README.md"
Repository = "https://github.com/buzzgreyday/pypergraph.git"
"Bug Tracker" = "https://github.com/buzzgreyday/pypergraph/issues"